Segunda versão do front, tela de busca de curso.

--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -11,60 +11,60 @@
 
 <body>
 
-    <nav class="menu-lateral">
+<nav class="menu-lateral">
 
 
-        <div class="btn-expandir">
-            <i class="bi bi-list" id="btn-exp"></i>
-        </div>
+    <div class="btn-expandir">
+        <i class="bi bi-list" id="btn-exp"></i>
+    </div>
 
-        <ul>
-            <li class="item-menu ativo">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-house-heart"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-search"></i></span>
-                    <span class="txt-link">Busca</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
-                    <span class="txt-link">Dicas</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-person-circle"></i></span>
-                    <span class="txt-link">Login</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Grupos</span>
-                </a>
-            </li>
-        </ul>
+    <ul>
+        <li class="item-menu ativo">
+            <a href="#">
+                <span class="icon"><i class="bi bi-house-heart"></i></span>
+                <span class="txt-link">Home</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="search.html">
+                <span class="icon"><i class="bi bi-search"></i></span>
+                <span class="txt-link">Busca</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="#">
+                <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
+                <span class="txt-link">Dicas</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="#">
+                <span class="icon"><i class="bi bi-person-circle"></i></span>
+                <span class="txt-link">Login</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="#">
+                <span class="icon"><i class="bi bi-people-fill"></i></span>
+                <span class="txt-link">Grupos</span>
+            </a>
+        </li>
+    </ul>
 
-    </nav>
-
-
-
-
-    <center>
-        <h2>Bem-Vindo <br> ao <br> FastBular</h2>
-    </center>
+</nav>
 
 
 
 
+<center>
+    <h2>Bem-Vindo <br> ao <br> FastBular</h2>
+</center>
 
-    <script src="menu.js"></script>
+
+
+
+
+<script src="menu.js"></script>
 
 </body>
 
