Quarta versão versão do front, tela de cadastro e inicio.

--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -32,13 +32,13 @@
             </a>
         </li>
         <li class="item-menu">
-            <a href="#">
+            <a href="dica.html">
                 <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
                 <span class="txt-link">Dicas</span>
             </a>
         </li>
         <li class="item-menu">
-            <a href="#">
+            <a href="login.html">
                 <span class="icon"><i class="bi bi-person-circle"></i></span>
                 <span class="txt-link">Login</span>
             </a>
