Quinta versão  do front, tela de dicas.

--- a/src/main/webapp/WEB-INF/dica.html
+++ b/src/main/webapp/WEB-INF/dica.html
@@ -12,61 +12,139 @@
 
 <body>
 
-    <nav class="menu-lateral">
+<nav class="menu-lateral">
 
 
-        <div class="btn-expandir">
-            <i class="bi bi-list" id="btn-exp"></i>
-        </div>
-
-        <ul>
-            <li class="item-menu ativo">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-house-heart"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="search.html">
-                    <span class="icon"><i class="bi bi-search"></i></span>
-                    <span class="txt-link">Busca</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
-                    <span class="txt-link">Dicas</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="login.html">
-                    <span class="icon"><i class="bi bi-person-circle"></i></span>
-                    <span class="txt-link">Login</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="#">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Grupos</span>
-                </a>
-            </li>
-        </ul>
-
-    </nav>
-
-
-
-
-    <div class="espaco-dica">
-
-
+    <div class="btn-expandir">
+        <i class="bi bi-list" id="btn-exp"></i>
     </div>
 
+    <ul>
+        <li class="item-menu ativo">
+            <a href="home.html">
+                <span class="icon"><i class="bi bi-house-heart"></i></span>
+                <span class="txt-link">Home</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="search.html">
+                <span class="icon"><i class="bi bi-search"></i></span>
+                <span class="txt-link">Busca</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="#">
+                <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
+                <span class="txt-link">Dicas</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="login.html">
+                <span class="icon"><i class="bi bi-person-circle"></i></span>
+                <span class="txt-link">Login</span>
+            </a>
+        </li>
+        <li class="item-menu">
+            <a href="#">
+                <span class="icon"><i class="bi bi-people-fill"></i></span>
+                <span class="txt-link">Faculdades</span>
+            </a>
+        </li>
+    </ul>
+
+</nav>
 
 
 
 
-    <script src="menu.js"></script>
+<div class="espaco-dica">
+
+    <h1>Como escolher uma faculdade</h1>
+    <br>
+    <p>Um jeito interessante de começar a escolher sua faculdade é pensar nas áreas ou disciplinas com as quais você tem maior afinidade.</p>
+    <br>
+    <p>Por exemplo, se você ama estudar Matemática e Física, cursos da área de Exatas, como Engenharia Civil, Estatística e Ciência da Computação, podem ser uma excelente aposta.</p>
+    <br>
+    <p>Já quem tem mais facilidade com Linguagens, Sociologia, História e Geografia, pode se dar bem em um curso da área de Humanas, como Letras, Direito, Psicologia ou Administração.</p>
+    <br>
+    <p>Existe ainda a área de Ciências Biológicas, que tem muito a ver com Química e Biologia e abrange vários cursos ligados à saúde como Medicina, Enfermagem e Odontologia.</p>
+    <br>
+    <p>Depois de fazer essa reflexão, você pode começar a pesquisar os cursos da área que mais se adequa ao seu perfil. Porém, também é importante considerar aspectos como:</p>
+    <br>
+    <p>As oportunidades em termos de empregabilidade e renda que cada curso oferece. <br>
+        Seus gostos e habilidades pessoais.</p>
+
+    <br>
+    <p>Após combinar suas áreas de interesse, gostos e habilidades, além de considerar o padrão de vida que pretende alcançar, você já deve ter chegado a algumas opções de faculdade, certo?</p>
+    <br>
+    <p>Agora é hora de analisar outro fator que pode ajudar na sua escolha – o tipo de curso, que explicaremos no próximo tópico.</p>
+    <br>
+    <h1>Bacharelado, licenciatura ou curso tecnológico?</h1>
+    <br>
+    <p>Existem três tipos de curso superior no Brasil – bacharelado, licenciatura e curso tecnológico (“de tecnólogo).</p>
+    <br>
+    <p>Essa é uma informação que você também deve levar em conta na hora de escolher seu curso.</p>
+    <br>
+    <p>Os cursos do tipo bacharelado costumam ter duração mais longa (entre 4 e 6 anos) e dão ao aluno uma formação mais generalista.</p>
+    <br>
+    <p>Já as licenciaturas são voltadas para o ensino e costumam ter duração entre 3 e 4 anos . São a melhor escolha para quem quer ser professor.</p>
+    <br>
+    <p>Os cursos tecnológicos, por sua vez, têm duração mais curta (de 2 a 3 anos) e oferecem uma formação mais prática ao aluno, visando sua rápida inserção no mercado de trabalho.</p>
+    <br>
+    <p>Vale dizer que alguns cursos são oferecidos no grau de bacharelado e licenciatura, como Educação Física, Pedagogia e Letras.</p>
+    <br>
+    <p>Veja alguns exemplos de cursos de bacharelado, licenciatura e tecnológicos oferecidos pelo Centro Educacional Anhanguera (ANHANGUERA):</p>
+    <br>
+    <h3><strong>Bacharelado</strong></h3>
+    <br>
+    <p>Administração</p>
+    <p>Biomedicina</p>
+    <p>Design</p>
+    <p>Engenharia Mecânica</p>
+    <p>Nutrição</p>
+    <br>
+    <h3><strong>Licenciatura</strong></h3>
+    <br>
+    <p>Música</p>
+    <p>Pedagogia</p>
+    <p>Artes Visuais</p>
+    <p>Educação Especial</p>
+    <p>Geografia</p>
+    <br>
+    <h3><strong>Tecnológicos</strong></h3>
+    <br>
+    <p>Automação Industrial</p>
+    <p>Cosmética e Imagem Pessoal</p>
+    <p>Design de Moda</p>
+    <p>Logística</p>
+    <p>Radiologia</p>
+    <br>
+    <h1>Onde estudar</h1>
+    <br>
+    <p>Depois de escolher um curso, você ainda precisa decidir onde estudar. Nas faculdades públicas a concorrência é sempre muito alta. Então boa parte dos estudantes acaba optando pelo ensino privado, onde é sempre mais fácil conseguir vagas em todos os cursos.</p>
+    <br>
+    <p>Porém, é fundamental avaliar se a faculdade é reconhecida pelo Ministério da Educação (MEC). Porque só faculdades reconhecidas podem expedir diplomas válidos a seus alunos.</p>
+    <br>
+    <p>Também é preciso avaliar quesitos como as instalações que a instituição oferece a seus alunos e qualificação dos professores.</p>
+    <br>
+    <p>E não dá para deixar de falar na questão das mensalidades, especialmente para quem tem o orçamento apertado.</p>
+    <br>
+    <p>Aqui a dica é procurar faculdades que oferecem condições especiais aos estudantes, como bolsas de estudo, crédito estudantil e convênios de descontos.</p>
+    <br>
+    <p>Para facilitar sua vida, elaboramos uma pequena lista de instituições reconhecidas e bem avaliadas pelo MEC, que oferecem cursos de todas as áreas e tipos, além de contarem com programas de bolsas, descontos e crédito educativo sem burocracia:</p>
+    <br>
+    <p>Veja também:</p>
+    <br>
+    <a href="https://www.mundovestibular.com.br/teste-vocacional">Teste vocacional online – Descubra sua vocação</a>
+    <br>
+    <a href="https://www.ead.com.br/">Descubra quais as profissões mais bem pagas</a>
+</div>
+
+
+
+
+
+<script src="menu.js"></script>
 
 </body>
 
