--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -46,7 +46,7 @@
         <li class="item-menu">
             <a href="#">
                 <span class="icon"><i class="bi bi-people-fill"></i></span>
-                <span class="txt-link">Grupos</span>
+                <span class="txt-link">Faculdades</span>
             </a>
         </li>
     </ul>
