--- a/src/main/webapp/WEB-INF/search.html
+++ b/src/main/webapp/WEB-INF/search.html
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li class="item-menu">
-            <a href="#">
+            <a href="dica.html">
                 <span class="icon"><i class="bi bi-journal-bookmark-fill"></i></span>
                 <span class="txt-link">Dicas</span>
             </a>
@@ -47,7 +47,7 @@
         <li class="item-menu">
             <a href="#">
                 <span class="icon"><i class="bi bi-people-fill"></i></span>
-                <span class="txt-link">Grupos</span>
+                <span class="txt-link">Faculdades</span>
             </a>
         </li>
     </ul>
