Sexta versão  do front, tela de atualização, versão final.

--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -57,7 +57,13 @@
 
 
 <center>
-    <h2>Bem-Vindo <br> ao <br> FastBular</h2>
+    <h2 class="home-h">Bem-Vindo <br> ao <br> FastBular</h2>
+<br>
+    <p class="home-p">Aonde você consegue encontra a universidade perfeita para sua realidade!</p>
+    <br>
+    <p><p class="home-p">Clique em Buscar para achar a faculdade ideal.</p></p>
+
+    <a href="search.html" class="b-busca">Buscar</a>
 </center>
 
 
